--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,16 +17,13 @@ x-defaults: &defaults
 #    - postgres
 #    - memcached
 #    - smtp
-
+  env_file:
+    - .env
   environment:
-    # Run `docker-compose run web config generate-secret-key`
-    # to get the SENTRY_SECRET_KEY value.
-    SENTRY_SECRET_KEY: ''
 #    SENTRY_MEMCACHED_HOST: memcached
     SENTRY_REDIS_HOST: redis
-    SENTRY_MARIADB_HOST: "mariadb://sentry:!456@db:3306/sentry"
+    SENTRY_DB_HOST: db
 #    SENTRY_POSTGRES_HOST: postgres
-#    SENTRY_EMAIL_HOST: smtp
   volumes:
     - sentry-data:/var/lib/sentry/files
 
